<resources>
    <string name="app_name">Duker</string>
    <string name="app_dir_name" translatable="false">Duker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- menu -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_stop_refresh">Stop Refresh</string>

    <!-- Drawer string -->
    <string name="drawer_item_home" translatable="false">Home</string>
    <string name="drawer_item_settings" translatable="false">Settings</string>
    <string name="drawer_item_open_source" translatable="false">Open Source</string>

    <!-- load string -->
    <string name="copyright" translatable="false">Copyright(&#169;) 2014&#8211;2015 Foree Inc.</string>
    <string name="speak_author" translatable="false">— C.Clarke</string>
    <string name="load_speak3" translatable="false">beyond them into the impossible</string>
    <string name="load_speak2" translatable="false">possible is by going</string>
    <string name="load_tv_app_name">DUKER</string>
    <string name="load_speak1" translatable="false">The only way of finding the limits of the</string>

    <!-- settings -->
    <string name="general">General</string>
    <string name="theme_setting">Them</string>
    <string name="dark_theme">Dark</string>
    <string name="offline_wifi_only">Cache on Wifi only</string>
    <string name="offline_wifi_only_summary">Cache articles only when a Wifi connection is available.</string>
    <string name="refresh_on_launch">Refresh on launch</string>
    <string name="refresh_on_launch_summary">Launch a full refresh when the app is launched</string>
    <string name="refresh_wifi_only">Refresh on Wifi only</string>
    <string name="refresh_wifi_only_summary">Refresh articles only when a Wifi connection is available.</string>
    <string name="enable_offline">Enable offline mode</string>
    <string name="enable_offline_summary">When enabled images and content will be automatically retrieved</string>
    <string name="about">About</string>
    <string name="offline">Offline</string>
    <string name="offline_caching">Offline caching: %s</string>
    <string name="offline_when_charging">Cache when charging only</string>
    <string name="offline_when_charging_summary">Cache articles only when a the device is charging.</string>

    <!-- open source -->
    <string name="github_address">https://github.com/lixiao123/Duker</string>
</resources>
