<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/my_preference_category"
        android:title="@string/general">
        <Preference
            android:key="theme_setting"
            android:title="@string/theme_setting" />
        <CheckBoxPreference
            android:key="dark_theme"
            android:title="@string/dark_theme"/>
        <CheckBoxPreference
            android:key="refresh_on_launch"
            android:title="@string/refresh_on_launch"
            android:summary="@string/refresh_on_launch_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/my_preference_category"
        android:title="@string/offline">
        <CheckBoxPreference
            android:key="offline_wifi_only"
            android:title="@string/offline_wifi_only"
            android:summary="@string/offline_wifi_only_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/my_preference_category"
        android:title="@string/about">
        <Preference
            android:title="@string/about">
            <intent android:action=".AboutActivity" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>